--- a/client/github_contribution.css
+++ b/client/github_contribution.css
@@ -2,7 +2,8 @@
 /* Modified By Aerocode. */
 
 @media only screen and (max-width: 768px) {
-    #graph-border {
+    #graph-border,
+    #graph-header {
         display: none;
     }
 }
