--- a/client/github_contribution.css
+++ b/client/github_contribution.css
@@ -1,7 +1,34 @@
 /* Author: bachvtuan@gmail.com */
 /* Modified By Aerocode. */
 
-@media only screen and (max-width: 960px) {
+@media only screen and (min-width: 1024px) {
+    #contribution-graph {
+        width: 960px;
+    }
+    #graph-holder {
+        align-items: center !important;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+    #contribution-graph {
+        width: 89vw;
+    }
+    #graph-holder {
+        align-items: center !important;
+    }
+}
+
+@media only screen and (max-width: 888px) {
+    #contribution-graph {
+        width: 89vw;
+    }
+    #graph-holder {
+        align-items: flex-end !important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
     #contribution-graph {
         display: none;
     }
@@ -41,7 +68,6 @@
 }
 
 #contribution-graph {
-    width: fit-content;
     margin: 25px auto 0;
 }
 
@@ -53,16 +79,14 @@
 
 #graph-border {
     border: 1px solid #e1e4e8 !important;
-    width: 960px;
     border-radius: 4px;
 }
 
 #graph-holder {
     overflow: hidden;
     display: flex !important;
-    align-items: flex-end !important;
     flex-direction: column !important;
-    margin: 5px 10px;
+    margin: 5px auto;
     max-width: 860px;
 }
 
